231396: Comment #4: Big Refactoring